<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TotalRecordsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/totalRecords"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TotalRecordsValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/zero"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/TotalRecordsText"
        app:layout_constraintStart_toEndOf="@+id/TotalRecordsText"
        app:layout_constraintTop_toTopOf="@+id/TotalRecordsText" />

    <TextView
        android:id="@+id/FoundRecordsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/foundRecords"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchRecords" />

    <TextView
        android:id="@+id/FoundRecordsValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/zero"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/FoundRecordsText"
        app:layout_constraintStart_toEndOf="@+id/FoundRecordsText"
        app:layout_constraintTop_toTopOf="@+id/FoundRecordsText"
        app:layout_constraintVertical_bias="0.0" />

    <SearchView
        android:id="@+id/SearchRecords"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/nameOrSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotalRecordsText" />

    <Button
        android:id="@+id/AddRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verticalSpacing"
        android:text="@string/addRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoundRecordsText" />



</androidx.constraintlayout.widget.ConstraintLayout>